// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verification step for out of cluster delegate render VerifyOutOfClusterDelegate 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
    style="height: 100%;"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-grey700--WvM3 StyledProps---padding-right-small--2ldZ StyledProps---padding-left-small--ODrE"
      >
        Verify Connection to 
         
        <span
          class="name"
        />
      </p>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws StepsProgress---stepsProgress--2IQh"
        id="steps-progress"
      >
        <div
          class="StepsProgress---progressBar--2_Dp"
        >
          <div
            class="bp3-progress-bar bp3-intent-success bp3-no-stripes StepsProgress---progressHeight--3zU4"
          >
            <div
              class="bp3-progress-meter"
              style="width: 33.33333333333333%;"
            />
          </div>
        </div>
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        >
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon bp3-icon-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK StyledProps---margin-right-small--Uojv"
              icon="tick"
            >
              <svg
                data-icon="tick"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick
                </desc>
                <path
                  d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="font-weight: bold;"
            >
              1 delegate found
            </p>
          </div>
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
            >
              <svg
                height="16"
                viewBox="0 0 128 128"
                width="16"
              >
                <g>
                  <path
                    d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                    fill="#ff8e02"
                  />
                  <path
                    d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                    fill="#ffddb3"
                    fill-opacity="0.3"
                  />
                  <path
                    d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                    fill="#ffd29a"
                    fill-opacity="0.4"
                  />
                  <path
                    d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                    fill="#ffc680"
                    fill-opacity="0.5"
                  />
                  <path
                    d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                    fill="#ffbb67"
                    fill-opacity="0.6"
                  />
                  <path
                    d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                    fill="#ffb04d"
                    fill-opacity="0.7"
                  />
                  <path
                    d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                    fill="#ffa535"
                    fill-opacity="0.8"
                  />
                  <path
                    d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                    fill="#ff991b"
                    fill-opacity="0.9"
                  />
                  <animatetransform
                    attributeName="transform"
                    calcMode="discrete"
                    dur="1200ms"
                    repeatCount="indefinite"
                    type="rotate"
                    values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                  />
                </g>
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="font-weight: bold;"
            >
              Establishing Connection between Delegate and Connector
            </p>
          </div>
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
              icon="blank"
            >
              <svg
                data-icon="blank"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  blank
                </desc>
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="font-weight: normal;"
            >
              Verifying Connection
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render in modal 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
    style="height: 100%;"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-grey700--WvM3 StyledProps---padding-right-small--2ldZ StyledProps---padding-left-small--ODrE"
      >
        Verify Connection to 
         
        <span
          class="name"
        />
      </p>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws StepsProgress---stepsProgress--2IQh"
        id="steps-progress"
      >
        <div
          class="StepsProgress---progressBar--2_Dp"
        >
          <div
            class="bp3-progress-bar bp3-intent-success bp3-no-stripes StepsProgress---progressHeight--3zU4"
          >
            <div
              class="bp3-progress-meter"
              style="width: 33.33333333333333%;"
            />
          </div>
        </div>
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        >
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon bp3-icon-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK StyledProps---margin-right-small--Uojv"
              icon="tick"
            >
              <svg
                data-icon="tick"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick
                </desc>
                <path
                  d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="font-weight: bold;"
            >
              1 delegate found
            </p>
          </div>
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
            >
              <svg
                height="16"
                viewBox="0 0 128 128"
                width="16"
              >
                <g>
                  <path
                    d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                    fill="#ff8e02"
                  />
                  <path
                    d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                    fill="#ffddb3"
                    fill-opacity="0.3"
                  />
                  <path
                    d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                    fill="#ffd29a"
                    fill-opacity="0.4"
                  />
                  <path
                    d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                    fill="#ffc680"
                    fill-opacity="0.5"
                  />
                  <path
                    d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                    fill="#ffbb67"
                    fill-opacity="0.6"
                  />
                  <path
                    d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                    fill="#ffb04d"
                    fill-opacity="0.7"
                  />
                  <path
                    d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                    fill="#ffa535"
                    fill-opacity="0.8"
                  />
                  <path
                    d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                    fill="#ff991b"
                    fill-opacity="0.9"
                  />
                  <animatetransform
                    attributeName="transform"
                    calcMode="discrete"
                    dur="1200ms"
                    repeatCount="indefinite"
                    type="rotate"
                    values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                  />
                </g>
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="font-weight: bold;"
            >
              Establishing Connection between Delegate and Connector
            </p>
          </div>
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
              icon="blank"
            >
              <svg
                data-icon="blank"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  blank
                </desc>
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="font-weight: normal;"
            >
              Verifying Connection
            </p>
          </div>
        </div>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws verificationText StyledProps---font-small--1qQz"
      >
        This process may take a while. You may close your window or wait until verification is completed.
      </p>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws btnWrapper"
    >
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          CONTINUE
        </span>
      </button>
    </div>
  </div>
</div>
`;
